--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ linkedin_username: nedelchenko-alyona-2663bb78
 
 # Build settings
 # markdown: kramdown
-theme: minima
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
 
