--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,9 @@ theme: minima
 plugins:
   - jekyll-feed
 
-# sass:
-#   sass_dir: ../../assets/_sass
-#   style: compressed
+sass:
+  sass_dir: _sass
+  style: compressed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
