--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: alona.nedelchenko@djangostars.com
 description: >- # this means to ignore newlines until "baseurl:"
 # Frontend blog
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "frontend-info" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  ned-alyona
 linkedin_username: nedelchenko-alyona-2663bb78
 
