--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Frontend Info
 email: alona.nedelchenko@djangostars.com
 description: >- # this means to ignore newlines until "baseurl:"
 # Frontend blog
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "frontend-info" # the subpath of your site, e.g. /blog
 url: "frontend-info" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  ned-alyona
 linkedin_username: nedelchenko-alyona-2663bb78
